# vscode-cmake-gcc-template

./: CMakeLists.txt  README.md
inc/: main.h
src/: main.c
